--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<input type="text" id="localAnswer" placeholder="local answer"/>
 			</p>
 		</div>
-
+		<script src="/agora-rtm-sdk-1.5.0.js"></script>
 		<script src="/main.js">
 			'use strict';	
 		</script>
