--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<div id="videos">
 				<!-- user1 -->
 				<video class="video-player" id="localVideo" controls autoplay playsinline></video>
-				<div id="shareVideo">
-					<video class="screen-share" id="localScreen"  autoplay></video>
+				<div id="share-screen">
+					<video class="screen-share-player" id="localScreen" controls autoplay></video>
 				</div>
 
 				<div id="buttons">
@@ -47,8 +47,8 @@
 			<div id="videos">
 				<!-- user2 -->
 				<video class="video-player" id="remoteVideo" controls autoplay playsinline></video>			
-				<div id="shareVideo">
-					<video class="screen-share" id="remoteScreen"  autoplay></video>
+				<div id="share-screen">
+					<video class="screen-share-player" id="remoteScreen" controls autoplay></video>
 				</div>
 				<div id="buttons">
 					<button  id="startRemoteScreen">+ Screen Share</button>
@@ -69,7 +69,7 @@
 				<input type="text" id="localAnswer" placeholder="local answer"/>
 			</p>
 		</div>
-		<script src="/agora-rtm-sdk-1.5.0.js"></script>
+		<!-- <script src="/agora-rtm-sdk-1.5.0.js"></script> -->
 		<script src="/main.js">
 			'use strict';	
 		</script>
